Add capability to load variables from other yaml files
