# internal/model/app.go
@@ -123,7 +123,7 @@ func readEnvFile(file string) ([]byte, error) {
 		}
 		return b, nil
 	}
-	return ioutil.ReadFile(file)
+	return os.ReadFile(file)
 }
 
 func loadEnvFiles(app *QbecApp, additionalFiles []string, v *validator) error {
@@ -180,9 +180,69 @@ func loadEnvFiles(app *QbecApp, additionalFiles []string, v *validator) error {
 	return nil
 }
 
+func downloadVarFile(url string) ([]byte, error) {
+	return downloadEnvFile(url)
+}
+
+func readVarFile(file string) ([]byte, error) {
+	if filematcher.IsRemoteFile(file) {
+		b, err := downloadVarFile(file)
+		if err != nil {
+			return nil, errors.Wrapf(err, "download vars from %s", file)
+		}
+		return b, nil
+	}
+	return os.ReadFile(file)
+}
+
+func loadVars(app *QbecApp, v *validator) error {
+	if app.Spec.Vars.Computed == nil {
+		app.Spec.Vars.Computed = []ComputedVar{}
+	}
+	if app.Spec.Vars.External == nil {
+		app.Spec.Vars.External = []ExternalVar{}
+	}
+	if app.Spec.Vars.TopLevel == nil {
+		app.Spec.Vars.TopLevel = []TopLevelVar{}
+	}
+	if app.Spec.DataSources == nil {
+		app.Spec.DataSources = []string{}
+	}
+
+	var varsFiles []string
+	varsFiles = append(varsFiles, app.Spec.VarFiles...)
+	var allVarsFiles []string
+	for _, filePattern := range varsFiles {
+		matchedFiles, err := filematcher.Match(filePattern)
+		if err != nil {
+			return err
+		}
+		allVarsFiles = append(allVarsFiles, matchedFiles...)
+	}
+	for _, file := range allVarsFiles {
+		b, err := readVarFile(file)
+		if err != nil {
+			return err
+		}
+		var qVars QbecVars
+		if err := yaml.Unmarshal(b, &qVars); err != nil {
+			return errors.Wrap(err, fmt.Sprintf("%s: unmarshal YAML", file))
+		}
+		errs := v.validateVarYAML(b)
+		if len(errs) > 0 {
+			return makeValError(file, errs)
+		}
+		app.Spec.Vars.Computed = append(qVars.Spec.Vars.Computed, app.Spec.Vars.Computed...)
+		app.Spec.Vars.External = append(qVars.Spec.Vars.External, app.Spec.Vars.External...)
+		app.Spec.Vars.TopLevel = append(qVars.Spec.Vars.TopLevel, app.Spec.Vars.TopLevel...)
+		app.Spec.DataSources = append(qVars.Spec.DataSources, app.Spec.DataSources...)
+	}
+	return nil
+}
+
 // NewApp returns an app loading its details from the supplied file.
 func NewApp(file string, envFiles []string, tag string) (*App, error) {
-	b, err := ioutil.ReadFile(file)
+	b, err := os.ReadFile(file)
 	if err != nil {
 		return nil, err
 	}
@@ -202,6 +262,10 @@ func NewApp(file string, envFiles []string, tag string) (*App, error) {
 	}
 
 	if err := loadEnvFiles(&qApp, envFiles, v); err != nil {
+		return nil, err
+	}
+
+	if err := loadVars(&qApp, v); err != nil {
 		return nil, err
 	}
 
