# internal/model/swagger-schema.go
@@ -1,20 +1,6 @@
-// Copyright 2021 Splunk Inc.
-//
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-//      http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
-
 package model
 
-// generated by gen-qbec-swagger from internal/model/swagger.yaml at 2022-07-15 05:48:30.172144 +0000 UTC
+// generated by gen-qbec-swagger from internal/model/swagger.yaml at 2024-06-18 16:31:57.562117 +0000 UTC
 // Do NOT edit this file by hand
 
 var swaggerJSON = `
@@ -98,7 +84,7 @@ var swaggerJSON = `
                     "type": "object"
                 },
                 "envFiles": {
-                    "description": "list of additional files containing environment definitions to load.\nenvironment definitions are merged in the order specified starting with any inline environments.\nAn environment defined in a later file takes precedence over the the same environment already loaded\nand replaces it.",
+                    "description": "list of additional files containing environment definitions to load.\nenvironment definitions are merged in the order specified starting with any inline environments.\nAn environment defined in a later file takes precedence over the the same environment already loaded\nand replaces it. But setting \"mergeImportedEnvs\" changes this behaviour to merge.",
                     "items": {
                         "type": "string"
                     },
@@ -141,6 +127,13 @@ var swaggerJSON = `
                 "postProcessor": {
                     "description": "file containing jsonnet code that can be used to post-process all objects, typically adding metadata like\nannotations",
                     "type": "string"
+                },
+                "varFiles": {
+                    "description": "list of additional files containing variables to load.\nVariables defined in a later file takes precedence over the the same variables already loaded\nand replaces it.",
+                    "items": {
+                        "type": "string"
+                    },
+                    "type": "array"
                 },
                 "vars": {
                     "$ref": "#/definitions/qbec.io.v1alpha1.Variables"
@@ -305,6 +298,54 @@ var swaggerJSON = `
                 }
             },
             "title": "Variables is a collection of external and top-level variables.",
+            "type": "object"
+        },
+        "qbec.io.v1alpha1.VariablesFile": {
+            "additionalProperties": false,
+            "properties": {
+                "apiVersion": {
+                    "description": "requested API version",
+                    "type": "string"
+                },
+                "kind": {
+                    "description": "object kind",
+                    "pattern": "^VariablesFile$",
+                    "type": "string"
+                },
+                "spec": {
+                    "$ref": "#/definitions/qbec.io.v1alpha1.VariablesFileSpec"
+                }
+            },
+            "required": [
+                "kind",
+                "apiVersion",
+                "spec"
+            ],
+            "title": "VariablesFile is a collection of variables and data sources.",
+            "type": "object"
+        },
+        "qbec.io.v1alpha1.VariablesFileSpec": {
+            "additionalProperties": false,
+            "properties": {
+                "dataSources": {
+                    "description": "a list of data sources to be defined for the qbec app.",
+                    "items": {
+                        "type": "string"
+                    },
+                    "type": "array"
+                },
+                "dsExamples": {
+                    "description": "sample output for every datasource for use by the linter",
+                    "type": "object"
+                },
+                "vars": {
+                    "$ref": "#/definitions/qbec.io.v1alpha1.Variables"
+                }
+            },
+            "required": [
+                "vars"
+            ],
+            "title": "VariablesFile is a collection of variables and data sources.",
             "type": "object"
         }
     },
