# internal/model/swagger.yaml
@@ -77,6 +77,14 @@ definitions:
           list of additional files containing environment definitions to load.
           environment definitions are merged in the order specified starting with any inline environments.
           An environment defined in a later file takes precedence over the the same environment already loaded
+          and replaces it. But setting "mergeImportedEnvs" changes this behaviour to merge.
+        items:
+          type: string
+        type: array
+      varFiles:
+        description: |-
+          list of additional files containing variables to load.
+          Variables defined in a later file takes precedence over the the same variables already loaded
           and replaces it.
         items:
           type: string
@@ -226,3 +234,38 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/qbec.io.v1alpha1.ComputedVar"
+  qbec.io.v1alpha1.VariablesFileSpec:
+    additionalProperties: false
+    type: object
+    title: VariablesFile is a collection of variables and data sources.
+    properties:
+      vars:
+        $ref: "#/definitions/qbec.io.v1alpha1.Variables"
+      dataSources:
+        description: a list of data sources to be defined for the qbec app.
+        items:
+          type: string
+        type: array
+      dsExamples:
+        description: sample output for every datasource for use by the linter
+        type: object
+    required:
+      - vars
+  qbec.io.v1alpha1.VariablesFile:
+    additionalProperties: false
+    type: object
+    title: VariablesFile is a collection of variables and data sources.
+    properties:
+      apiVersion:
+        description: requested API version
+        type: string
+      kind:
+        description: object kind
+        pattern: ^VariablesFile$
+        type: string
+      spec:
+        $ref: "#/definitions/qbec.io.v1alpha1.VariablesFileSpec"
+    required:
+      - kind
+      - apiVersion
+      - spec
